# sara

./: .gitignore  GEMINI.md  GEMINI_TYPE_SAFETY_PLAN.md  NAMING_GUIDELINES.md  README.md  SARA_DOCUMENTATION.md  SARA_DOCUMENTATION_V2.md  SARA_IMPROVEMENTS.md  SETUP.md  TARGETED_CODE_REVIEW_PLAN.md  USER_GUIDE.md  bug.md  build_output.txt  cabal.project.local  checklist_final.md  compare.txt  core-safe-wrangling.patch  departments.csv  employees.csv  full-safe-refactor.patch  gptSuggestionsSara.txt  improvements.md  issueno3.md  normalized_header.txt  pending_modules.md  people.csv  people.json  people_out.csv  people_out.json  people_plot.json  potential_improvements.md  progress.md  roadmap.txt  sara-fix-partials.patch  sara.cabal  saraShortcomings.md  sara_analysis.md  sara_commit_message.txt  sara_guidelines.md  sara_roadmap.md  (+14 more)
.gemini/: GEMINI.md  GEMINI_TYPE_SAFETY_PLAN.md
.hie/: Main.hie
.hie/Sara/: Error.hie  REPL.hie
.hie/Sara/Core/: Types.hie
.hie/Sara/DataFrame/: Aggregate.hie  Apply.hie  Concat.hie  Expression.hie  IO.hie  Internal.hie  Join.hie  Missing.hie  Predicate.hie  SQL.hie  Static.hie  Statistics.hie  Strings.hie  TimeSeries.hie  Transform.hie  Types.hie  Wrangling.hie
.hie/Sara/Internal/: Safe.hie
.hie/Sara/Schema/: Definitions.hie
.hie/Sara/Validation/: Employee.hie
app/: Main.hs  Tutorial.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  sara-0.1.0.0-inplace.conf
src/Sara/: Error.hs  REPL.hs  Visualization.hs
src/Sara/.liquid/: Error.hs.cst.html  Error.hs.html  Error.hs.json  Error.hs.vim.annot
src/Sara/Core/: Types.hs
src/Sara/DSL/: MutateParser.hs
src/Sara/DataFrame/: Aggregate.hs  Apply.hs  Concat.hs  CsvInstances.hs  Expression.hs  IO.hs  Instances.hs  Internal.hs  Join.hs  Missing.hs  Predicate.hs  SQL.hs  Static.hs  Statistics.hs  Stream.hs  Strings.hs  TimeSeries.hs  Transform.hs  Types.hs  Wrangling.hs
src/Sara/DataFrame/.liquid/: CsvInstances.hs.cst.html  CsvInstances.hs.html  CsvInstances.hs.json  CsvInstances.hs.vim.annot  TimeSeries.hs.cst.html  TimeSeries.hs.html  TimeSeries.hs.json  TimeSeries.hs.vim.annot
src/Sara/Internal/: Safe.hs
src/Sara/Schema/: Definitions.hs
src/Sara/Validation/: Employee.hs
test/: Benchmark.hs  Properties.hs  StaticSpec.hs  StreamingBenchmark.hs  TestSuite.hs  TypeLevel.hs  run-should-not-compile-tests.sh
test/ShouldNotCompile/: MutateShouldFail.hs  ShouldNotCompile.hs  SortNonOrdColumn.hs  UpdateNonExistentColumn.hs
