cabal-version:       >=1.10
name:                sara
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:     Sara.DataFrame.IO
                     , Sara.DataFrame.Aggregate
                     , Sara.DataFrame.Concat
                     , Sara.DataFrame.Expression
                     , Sara.DataFrame.Join
                     , Sara.DataFrame.Missing
                     , Sara.DataFrame.Predicate
                     , Sara.DataFrame.SQL
                     , Sara.DataFrame.Static
                     , Sara.DataFrame.Statistics
                     , Sara.DataFrame.Strings
                     , Sara.DataFrame.TimeSeries
                     , Sara.DataFrame.Transform
                     , Sara.DataFrame.Types
                     , Sara.DataFrame.Wrangling
                     , Sara.REPL
                     , Sara.DataFrame.Instances
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <5
                     , text
                     , containers
                     , time
                     , hashable
                     , vector
                     , cassava
                     , bytestring
                     , unordered-containers
                     , aeson
                     , template-haskell
                     , parallel
                     , vector-strategies
                     , deepseq
                     , process
                     , filepath
                     , directory
                     , scientific
                     , sqlite-simple
  default-language:    Haskell2010
  ghc-options:         -Wall



executable sara-tutorial
  main-is:          Tutorial.hs
  hs-source-dirs:      app
  build-depends:       base, sara, text, containers, vector, time, parallel, vector-strategies, deepseq
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite sara-test
  type:                exitcode-stdio-1.0
  main-is:             TestSuite.hs
  hs-source-dirs:      test, src
  build-depends:       base, hspec, text, containers, time, sara, vector, template-haskell, cassava, bytestring, aeson, scientific, unordered-containers, parallel, deepseq, vector-strategies
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:
    Sara.DataFrame.Aggregate
    , Sara.DataFrame.IO
    , Sara.DataFrame.Missing
    , Sara.DataFrame.Statistics
    , Sara.DataFrame.Strings
    , Sara.DataFrame.TimeSeries
    , Sara.DataFrame.Transform
    , Sara.DataFrame.Types
    , Sara.DataFrame.Wrangling
    , Sara.DataFrame.Expression
    , Sara.DataFrame.Predicate
    , Sara.DataFrame.Instances
    , Sara.DataFrame.Static
